--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Marmitando Pedidos</title>
-    <script type="module" src="./js/app.js"></script>
+    <script defer type="module" src="./js/app.js"></script>
 </head>
 <body>
     
     <input type="text" name="" id="input">
-    <button id="btn"> Salvar </button>
+    <button id="btn"> Inserir </button>
+
+    <ul id="list-test"></ul>
 
 </body>
 </html>
