CRUD completo Realtime Database

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 <body>
     
     <input type="text" name="" id="input">
-    <button id="btn"> Inserir </button>
+    <button id="btn-insert"> Inserir </button>
+    <button id="btn-clear"> Limpar seleção </button>
 
     <ul id="list-test"></ul>
 
