Trabalhando no fluxo de carregamento das paginas

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,23 @@
 
 <body>
 
-  <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
+  <div role="progressbar" class="mdc-linear-progress" aria-label="Progress Bar" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0">
+    <div class="mdc-linear-progress__buffer">
+      <div class="mdc-linear-progress__buffer-bar"></div>
+      <div class="mdc-linear-progress__buffer-dots"></div>
+    </div>
+    <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+      <span class="mdc-linear-progress__bar-inner"></span>
+    </div>
+    <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+      <span class="mdc-linear-progress__bar-inner"></span>
+    </div>
+  </div>
+
+  <header class="mdc-top-app-bar mdc-top-app-bar--dense">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-        <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
+        <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">account_circle</button>
         <span class="mdc-top-app-bar__title">Firebase Studies</span>
       </section>
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
@@ -28,14 +41,10 @@
   </header>
 
   <main class="mdc-top-app-bar--short-fixed-adjust">
-         
-    <input type="text" name="" id="input">
-    <button id="btn-insert"> Inserir </button>
-  
-    <ul id="list-test"></ul>
     
-  </main>
+    <div id="root-element"></div>
 
+  </main>
 
 </body>
 
