--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,6 @@
 
 <body>
 
-  <div role="progressbar" class="mdc-linear-progress" aria-label="Progress Bar" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0">
-    <div class="mdc-linear-progress__buffer">
-      <div class="mdc-linear-progress__buffer-bar"></div>
-      <div class="mdc-linear-progress__buffer-dots"></div>
-    </div>
-    <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
-      <span class="mdc-linear-progress__bar-inner"></span>
-    </div>
-    <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
-      <span class="mdc-linear-progress__bar-inner"></span>
-    </div>
-  </div>
-
   <header class="mdc-top-app-bar mdc-top-app-bar--dense">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
@@ -35,13 +22,14 @@
         <span class="mdc-top-app-bar__title">Firebase Studies</span>
       </section>
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Bookmark this page" id="login">login</button>
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Bookmark this page"
+          id="login">login</button>
       </section>
     </div>
   </header>
 
-  <main class="mdc-top-app-bar--short-fixed-adjust">
-    
+  <main class="mdc-top-app-bar--dense-fixed-adjust">
+
     <div id="root-element"></div>
 
   </main>
@@ -49,3 +37,4 @@
 </body>
 
 </html>
+
