--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <header class="mdc-top-app-bar mdc-top-app-bar--dense">
+  <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
         <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">account_circle</button>
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <main class="mdc-top-app-bar--dense-fixed-adjust">
+  <main class="mdc-top-app-bar--fixed-adjust">
 
     <div id="root-element"></div>
 
