--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script defer src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <link rel="stylesheet" href="./css/index.css">
-  <title>Marmitando Pedidos</title>
+  <title>Alan's Web Chat</title>
   <script defer type="module" src="./js/app.js"></script>
 </head>
 
